--- a/system/iptables-masquerade.conf
+++ b/system/iptables-masquerade.conf
@@ -1,5 +1,6 @@
 start on startup
 stop on runlevel [016]
 script
+    . /home/homeuser/router.conf
     iptables -t nat -A POSTROUTING -o $GATEWAY -j MASQUERADE
 end script
