--- a/ui/couchapp.json
+++ b/ui/couchapp.json
@@ -1,4 +1,4 @@
 {
-    "name": "Basic CouchApp",
-    "description": "CouchApp with changes feed and form support."
+    "name": "UI CouchApp",
+    "description": "CouchApp Router UI"
 }
