--- a/ui/_attachments/package.json
+++ b/ui/_attachments/package.json
@@ -5,6 +5,7 @@
     "devDependencies": {
         "grunt":"latest",
         "grunt-contrib-concat":"latest",
-        "grunt-contrib-jst":"latest"
+        "grunt-contrib-jst":"latest",
+        "grunt-contrib-js-hint": "latest"
     }
 }
