concat and minify

--- a/ui/_attachments/package.json
+++ b/ui/_attachments/package.json
@@ -6,6 +6,7 @@
         "grunt":"latest",
         "grunt-contrib-concat":"latest",
         "grunt-contrib-jst":"latest",
-        "grunt-contrib-jshint": "latest"
+        "grunt-contrib-jshint": "latest",
+        "grunt-contrib-uglify": "latest"
     }
 }
