--- a/system/upstart/homework-router.conf
+++ b/system/upstart/homework-router.conf
@@ -1,4 +1,5 @@
 #homework-router - openvswitch and POX auto start and stop
 start on started couchdb
+env PYTHONPATH=/home/homeuser/phd_code/pox/
 
 exec /home/homeuser/phd_code/system/openvswitch.sh start
