set working directory

--- a/system/upstart/homework-router.conf
+++ b/system/upstart/homework-router.conf
@@ -1,5 +1,5 @@
 #homework-router - openvswitch and POX auto start and stop
 start on started couchdb
 env PYTHONPATH=/home/homeuser/phd_code/pox/
-
+chdir /home/homeuser/
 exec /home/homeuser/phd_code/system/openvswitch.sh start
