--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ services:
     
 before_script:
     - curl -X PUT localhost:5984/config
+    - "pep8"
     
 install:
     pip install couchdbkit couchapp
+
+script:
+    python -m unittest tests/main
