--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language : python
-python: 
+python:
     - "2.7"
 services:
     - "couchdb"
-    
+
 before_script:
     - curl -X PUT localhost:5984/config
-    
+
 install:
     pip install couchdbkit couchapp
 
 script:
-    python tests/main.py
+    python -m unittest discover -v
