--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ services:
 
 before_script:
     - curl -X PUT localhost:5984/config
+    - cd database && couchapp push http://localhost:5984
+    - curl localhost:5984/config/design/homework-remote/_views/dhcp
 
 install:
     pip install couchdbkit couchapp
