actually include db name

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 
 before_script:
     - curl -X PUT localhost:5984/config
-    - couchapp push database/ http://localhost:5984
+    - couchapp push database/ http://localhost:5984/config
     - curl localhost:5984/config/_design/homework-remote/_views/dhcp
 
 install:
