--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_script:
     "pep8 --ignore=E501 process_config notifications"
 
 script:
-    python -m unittest discover
+    python -m unittest discover -v
