--- a/system/homework-notifications.conf
+++ b/system/homework-notifications.conf
@@ -1,5 +1,6 @@
 stop on stopping couchdb
 
 expect fork
-
+env PYTHONPATH="/home/homeuser/phd_code/"
+export PYTHONPATH
 exec /home/homeuser/phd_code/notifications/notification_service_runner.py &
