--- a/system/notification-registration.conf
+++ b/system/notification-registration.conf
@@ -1,5 +1,7 @@
 stop on stopping couchdb
 
 expect fork
+env PYTHONPATH="/home/homeuser/phd_code/"
+export PYTHONPATH
 
 exec /home/homeuser/phd_code/process_config/notification_registration_client.py &
