--- a/system/homework-undo-processor.conf
+++ b/system/homework-undo-processor.conf
@@ -1,5 +1,6 @@
 stop on stopping couchdb
 
 expect fork
-
-exec /home/homeuser/phd_code/process_config/undo.py &
+env PYTHONPATH="/home/homeuser/phd_code/"
+export PYTHONPATH
+exec /home/homeuser/phd_code/process_config/perform_undo.py &
