remove template files

--- a/ui/.couchappignore
+++ b/ui/.couchappignore
@@ -1,4 +1,17 @@
 [
-"^grunt",
-"Gruntfile.js"
+"control_panel.html",
+"device_deny.html",
+"device_pending.html",
+"device_permit.html",
+"history.html",
+"history_item.html",
+"home_device.html",
+"home_devices.html",
+"home.html",
+"home_wifi.html",
+"login.html",
+"notification_collection.html",
+"notification_item.html",
+"user_id.html",
+"wifi.html"
 ]
