--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 notifications/NotificationServices/*.pyc
 .couchapprc
-ui/_attachments/bower_components/*
+bower_components
 *.pyc
 node_modules
 templates.js
