--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
     - "couchdb"
 
 install:
-    - pip install couchdbkit couchapp pep8 mock python-dateutil==1.5 python-crontab
+    - pip install couchdbkit couchapp pep8 mock python-dateutil==1.5 python ascheduler
     - curl -X PUT http://localhost:5984/config
     - couchapp push database/ http://localhost:5984/config
 
