--- a/system/homework-notification-registration.conf
+++ b/system/homework-notification-registration.conf
@@ -3,5 +3,8 @@ stop on stopping couchdb
 expect fork
 env PYTHONPATH="/home/homeuser/phd_code/"
 export PYTHONPATH
-
-exec /home/homeuser/phd_code/process_config/notification_registration_client_runner.py &
+script
+    ./etc/homework/notifications.conf
+    export APP_ENGINE_ROUTER_ID
+    exec /home/homeuser/phd_code/process_config/notification_registration_client_runner.py &
+end script
