--- a/system/homework-undo.conf
+++ b/system/homework-undo.conf
@@ -3,4 +3,8 @@ stop on stopping couchdb
 expect fork
 env PYTHONPATH="/home/homeuser/phd_code/"
 export PYTHONPATH
-exec /home/homeuser/phd_code/undo/undo_runner.py &
+script
+    . /etc/homework/notifications.conf
+    export APP_ENGINE_ROUTER_ID
+    exec /home/homeuser/phd_code/undo/undo_runner.py &
+    end script
