add jquery-ui and JS for datepicker Also fixed dates in history home

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "jquery": "latest",
+    "jquery-ui": "latest",
     "backbone": "latest",
     "backbone-couchdb": "latest",
     "jasmine": "latest",
