--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ node_modules
 templates.js
 notifications/~notifications.out
 ui/_attachments/libs
-typings/*
+ui/_attachments/typings/*
 notifications/appengine.conf
+.vscode/*
+tsd.json
+jsconfig.json
