--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homework-router-ui",
   "version": "0.0.1",
-  "private": "true",
+  "private": true,
   "devDependencies": {
     "grunt": "latest",
     "grunt-contrib-concat": "latest",
